[package]
name = "app-core"
version = "0.1.0"
authors = ["cosmoplankton <cosmoplankton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
js-sys = "0.3.19"
wasm-bindgen = "0.2.44"
lazy_static = "1.4.0"
nalgebra = "0.24.0"
ndarray = "0.14.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Window',
  'HtmlCanvasElement',
  'EventTarget',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]



